adding few features: css & js

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="row">
             <div class="col-sm-2">
                 <div>
-                <div class="btn-group-vertical" role="group" id="buttons-view">
-                    <!-- Buttons will be renderred here -->
-                </div>
+                    <div class="btn-group-vertical" role="group" id="buttons-view">
+                        <!-- Buttons will be renderred here -->
+                    </div>
                 </div>
             </div>
             <div class="col-sm-10" id="search-window">
-                <div class="row">
-                    <h2>Search Result</h2>
+                <div class="row" id="title">
+                    <h5>Please click on any button in the left menu to see the results...</h5>
                 </div>
                 <div class="row" id="search-result">
                     <!-- Movies will Get Dumped Dere -->
