fixing animation bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-light bg-light justify-content-between">
             <a class="navbar-brand">GifTastic by Kal</a>
             <form class="form-inline" id="movie-form">
-                <input class="form-control mr-sm-2" type="text" placeholder="Add a Movie" id="item-input">
+                <input class="form-control mr-sm-2" type="text" placeholder="Add a Movie button to the list" id="item-input">
                 <input class="btn btn-outline-success" id="add-item" type="submit" value="Submit">
             </form>
         </nav>
