--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
             </div>
             <div class="col-sm-10" id="search-window">
                 <div class="row" id="title">
-                    <h5>Please click on any button in the left menu to see the results...</h5>
+                    
                 </div>
                 <div class="row" id="search-result">
+                    <div class="col-sm-12">
+                    <div id="poweredBy">
+                    	<h5>Please click on any button in the left menu to see the search results...
+                    	<br>
+                    </h5>
+                    	<img src="assets/images/powered_by_giphy.gif" class="img-fluid">
+                    </div>
+                    </div>
                     <!-- Movies will Get Dumped Dere -->
                 </div>
             </div>
